Spring upgrade to 3.0.1 (and exclude v3.0.0 of Spring jars) Switch to generics for ApplicationListener implementers Migration and enhancement of unit tests task Migration to Junit 4.7 Migration and enhancement of the Junit Ant task Removed now unuseful CapdematTestSuite